adding left value for theme palette

--- a/style.css
+++ b/style.css
@@ -37,13 +37,13 @@ body {
     opacity: 0;
   }
   to {
-    left: calc(100% - 30px);
+    left: calc(100% - 50px);
     opacity: 1;
   }
 }
 @keyframes toggler-slide-out {
   from {
-    left: calc(100% - 30px);
+    left: calc(100% - 50px);
     opacity: 1;
   }
   to {
@@ -323,6 +323,7 @@ body {
   display: grid;
   grid-template-columns: 50% 50%;
   width: 100vw;
+  margin-top: 50px;
 }
 
 #container .intro .intro-info {
@@ -760,6 +761,7 @@ body {
   /* landing screen */
   #container .intro {
     grid-template-columns: auto;
+    margin-top: 30px;
   }
 
   #container .intro .intro-info{
@@ -780,7 +782,7 @@ body {
   } 
 
   #container .intro .intro-info div .greetings{
-    font-size: 16px;
+    font-size: 18px;
   }
 
   #container .intro .intro-picture img{
